--- a/_sass/lp.scss
+++ b/_sass/lp.scss
@@ -184,3 +184,38 @@ section {
     }
   }
 }
+
+#header {
+  padding: 24px 0;
+
+  img {
+    width: 180px;
+    height: auto;
+  }
+
+  p {
+    padding-top: 20px;
+  }
+
+  box-shadow: 10px 10px 5px #888888;
+}
+
+#footer {
+  background: #000000;
+  font-family: $font-family-sans-serif;
+  font-weight: 400;
+  font-size: 14px * $zoom;
+  color: #A7A7A7;
+  letter-spacing: 0.5px;
+  line-height: 16px * $zoom;
+  margin: 0;
+  padding: 20px;
+
+  a {
+    color: #A7A7A7;
+  }
+
+  p {
+    margin: 0;
+  }
+}
